--- a/services/CustomerOnboarding/CustomerOnboarding.Api/appsettings.json
+++ b/services/CustomerOnboarding/CustomerOnboarding.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CustomerOnboarding": "Data Source=LAPTOP-OKIKVU38;Initial Catalog=CustomerOnBoardingDb;Integrated Security=True"
+    "CustomerOnboardingConnectionString": "Data Source=LAPTOP-OKIKVU38;Initial Catalog=CustomerOnBoardingDb;Integrated Security=True"
   },
 
   "Getbanks": {
@@ -17,3 +17,5 @@
   }
 
 }
+
+  
